[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mypy_extensions"
version = "1.0.0-dev"
description = "Type system extensions for programs checked with the mypy type checker."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
authors = [
    {name = "The mypy developers", email = "jukka.lehtosalo@iki.fi"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
]
[project.urls]
Repository = "https://github.com/python/mypy_extensions"
