[build-system]
requires      = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name        = "mypy_extensions"
version     = "1.1.0-dev"
description = "Type system extensions for programs checked with the mypy type checker."
readme      = "README.md"
authors     = [
    {name = "The mypy developers", email = "jukka.lehtosalo@iki.fi"}
]
license     = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/python/mypy_extensions"

[tool.setuptools]
py-modules = ["mypy_extensions"]
