[metadata]
name = mypy_extensions
version = 1.0.0-dev
author = The mypy developers
author_email = jukka.lehtosalo@iki.fi
license = MIT License
description = Type system extensions for programs checked with the mypy type checker.
url = https://github.com/python/mypy_extensions
long_description = Mypy Extensions
    ===============

    The "mypy_extensions" module defines extensions to the standard "typing" module
    that are supported by the mypy type checker and the mypyc compiler.

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development

[options]
py_modules = mypy_extensions
python_requires = >=3.7
